Issue #279 added spacing for alerts in regional pages

--- a/docroot/sites/all/themes/informea.theme/css/style-from-less.css
+++ b/docroot/sites/all/themes/informea.theme/css/style-from-less.css
@@ -881,4 +881,7 @@ fieldset[disabled] a.explore a {
   margin-bottom: 1em;
   text-transform: uppercase;
 }
+.system-container .alert:first-child {
+  margin-top: 20px;
+}
 /*# sourceMappingURL=style-from-less.css.map */
