--- a/docroot/sites/all/themes/informea.theme/less/pages/regional-page.less
+++ b/docroot/sites/all/themes/informea.theme/less/pages/regional-page.less
@@ -451,3 +451,8 @@
   }
 }
 
+.system-container {
+  .alert:first-child {
+    margin-top: 20px;
+  }
+}
